--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,5 @@ key = {
     "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-fbsvc%40hackharvard2025.iam.gserviceaccount.com",
     "universe_domain": "googleapis.com"
   }
+
+GOOGLE_API_KEY = "AIzaSyD6xvdu87GRj0yNK1cl2BSCo9F9bJsDnIE"
