--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/leaflet": "^1.9.16",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.479.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
